newDevices for layer handler
